# haskell-taskwarrior

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  Shakefile.hs  brittany.yaml  build.sh  cabal.haskell-ci  cabal.project  default.nix  hie.yaml  taskwarrior.cabal  test.nix
.forgejo/workflows/: test.yaml
.github/workflows/: haskell.yml
nix/: sources.json
src/Taskwarrior/: Annotation.hs  Duration.hs  IO.hs  Mask.hs  Priority.hs  RecurringChild.hs  Status.hs  Task.hs  Time.hs  UDA.hs
test/: TaskSpec.hs  hie.yaml
