cabal-version:      >= 2.0
name:               taskwarrior
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           Types and Aeson instances for Taskwarrior Tasks
description:        Types and Aeson instances for the https://taskwarrior.org task import/export feature
homepage:           https://github.com/maralorn/haskell-taskwarrior
bug-reports:        https://github.com/maralorn/haskell-taskwarrior/issues
license:            AGPL-3.0-only
license-file:       LICENSE
author:             Malte Brandy
maintainer:         malte.brandy@maralorn.de
tested-with:        GHC ==8.6.5 || ==8.8.1
category:           taskwarrior, data, aeson
extra-source-files: CHANGELOG.md, README.md

library
  ghc-options:        -Wall

  exposed-modules:
    Taskwarrior.Annotation
    Taskwarrior.Duration
    Taskwarrior.IO
    Taskwarrior.Mask
    Taskwarrior.Priority
    Taskwarrior.Status
    Taskwarrior.Task
    Taskwarrior.Time
    Taskwarrior.UDA

  default-extensions:
    LambdaCase
    OverloadedStrings
    QuasiQuotes
    RecordWildCards

  build-depends:
    , aeson
    , base                  >=4.0.0.0 && <5.0.0.0
    , bytestring
    , process
    , string-interpolate
    , text
    , time
    , unordered-containers
    , uuid

  hs-source-dirs:     src

  default-language:   Haskell2010

test-suite test-taskwarrior
  ghc-options:        -Wall -Wno-orphans
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-tool-depends: hspec-discover:hspec-discover -any
  other-modules:      TaskSpec
  build-depends:
    , aeson
    , base
    , hspec
    , QuickCheck
    , quickcheck-instances
    , taskwarrior
    , text
    , time
    , unordered-containers
    , uuid
