cabal-version: 2.4
name: taskwarrior
version: 0.6.0.7
synopsis: Types and aeson instances for taskwarrior tasks
description:
  Types and aeson instances for the https://taskwarrior.org task import/export feature

homepage: https://github.com/maralorn/haskell-taskwarrior
bug-reports: https://github.com/maralorn/haskell-taskwarrior/issues
license: AGPL-3.0-or-later
license-file: LICENSE
author: maralorn <mail@maralorn.de>
maintainer: maralorn <mail@maralorn.de>
category: Taskwarrior, Data
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/maralorn/haskell-taskwarrior.git

library
  ghc-options: -Wall
  -- cabal-gild: discover src
  exposed-modules:
    Taskwarrior.Annotation
    Taskwarrior.IO
    Taskwarrior.Mask
    Taskwarrior.Priority
    Taskwarrior.RecurringChild
    Taskwarrior.Status
    Taskwarrior.Task
    Taskwarrior.Time
    Taskwarrior.UDA

  default-extensions:
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    StrictData

  build-depends:
    aeson >=2.0.0.0 && <2.3,
    base >=4.11 && <4.22,
    bytestring >=0.10.8.2 && <0.13,
    containers >=0.5.0.0 && <0.9,
    process ^>=1.6.5.0,
    random >=1.1 && <1.4,
    text >=1.2.3.0 && <2.2,
    time >=1.8.0.2 && <1.15,
    uuid ^>=1.3.13,

  hs-source-dirs: src
  default-language: Haskell2010

test-suite test-taskwarrior
  ghc-options:
    -Wall
    -Wno-orphans

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-tool-depends: hspec-discover:hspec-discover
  other-modules: TaskSpec
  build-depends:
    QuickCheck >=2.13.2 && <2.17,
    aeson,
    base,
    containers,
    hspec >=2.7.1 && <2.12,
    quickcheck-instances ^>=0.3.22,
    taskwarrior,
    text,
    time,
    uuid,

  default-language: Haskell2010
